fix(style/global): fix horizontal overflow

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -66,6 +66,7 @@
 html,
 body {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 html {
